# AOC2025

./: .gitmodules  CMakeLists.txt  make.sh
day1/: CMakeLists.txt  day1-2.c  day1.c  lib.c  lib.h
day2/: CMakeLists.txt  day2-2.c  day2.c  lib.c  lib.h
examples/: CMakeLists.txt
examples/blink_led_asm/: CMakeLists.txt  a.out  blink.s  just_enable.s  main.c
examples/blink_led_c/: CMakeLists.txt  blink_led.c  blink_led_clock.c  blink_led_count.c
examples/test_display/: CMakeLists.txt  test_display.c  test_display_64_bit.c
libs/: display.c  display.h
scripts/: data_to_c.rb  example_to_c_header.rb
tests/: CMakeLists.txt  day1.c  day2.c
